fix library on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 .card-zoom {
-  @apply cursor-auto overflow-hidden shadow-xl w-60 h-60 rounded-2xl;
+  @apply overflow-hidden shadow-xl rounded-2xl hover:cursor-pointer;
 }
 
 .card-zoom-image {
